# turtle_imitation

./: README.md
turtle_motion_rft/: CMakeLists.txt  package.xml
turtle_motion_rft/launch/: only_stroke.launch.py  with_flapping.launch.py
turtle_motion_rft/ml_models/: imitation_model.keras
turtle_motion_rft/scripts/: flapping_smc.py  stroke_imitated.py
