<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_motion_rft</name>
  <version>0.0.1</version>
  <description>ROS2 package for turtle imitated motion</description>
  <maintainer email="yhm@ieee.org">Yuya Hamamatsu</maintainer>
  <license>Apache License 2.0</license>
  <author>Yuya Hamamatsu</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
